Add Docker multi-instance setup with MySQL
- Add Docker Compose configuration with 3 Spring Boot instances
- Add MySQL 8.0 database with persistent storage
- Add Dockerfile with multi-stage build optimization
- Add Docker startup script with management commands
- Add MySQL driver and Spring Boot Actuator dependencies
- Add Docker-specific application configuration
- Add MySQL initialization script
- Add .dockerignore for optimized builds
- Update README with comprehensive Docker instructions
- Support for distributed testing with multiple instances

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,12 @@
             <artifactId>spring-boot-starter-jdbc</artifactId>
         </dependency>
 
+        <!-- Spring Boot Actuator for health checks -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+
         <!-- ShedLock -->
         <dependency>
             <groupId>net.javacrumbs.shedlock</groupId>
@@ -69,6 +75,14 @@
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+
+        <!-- MySQL Driver -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version>
             <scope>runtime</scope>
         </dependency>
 
