--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   # MySQL Database
   mysql:
@@ -24,7 +22,9 @@ services:
 
   # Spring Boot Application Instance 1
   shedlock-app-1:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: shedlock-app-1
     environment:
       SPRING_PROFILES_ACTIVE: docker
@@ -43,7 +43,9 @@ services:
 
   # Spring Boot Application Instance 2
   shedlock-app-2:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: shedlock-app-2
     environment:
       SPRING_PROFILES_ACTIVE: docker
@@ -62,7 +64,9 @@ services:
 
   # Spring Boot Application Instance 3
   shedlock-app-3:
-    build: .
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: shedlock-app-3
     environment:
       SPRING_PROFILES_ACTIVE: docker
